--- a/_sass/minima/skins/dark.scss
+++ b/_sass/minima/skins/dark.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-$brand-color:           #45c75d !default;
+$brand-color:           #999999 !default;
 $brand-color-light:     lighten($brand-color, 5%) !default;
 $brand-color-dark:      darken($brand-color, 35%) !default;
 
@@ -10,7 +10,7 @@ $text-color:            #bbbbbb !default;
 $background-color:      #181818 !default;
 $code-background-color: #212121 !default;
 
-$link-base-color:       #45c75d !default;
+$link-base-color:       #79b8ff !default;
 $link-visited-color:    $link-base-color !default;
 $link-hover-color:      $text-color !default;
 
