--- a/_sass/minima/skins/dark.scss
+++ b/_sass/minima/skins/dark.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-$brand-color:           #999999 !default;
+$brand-color:           #45c75d !default;
 $brand-color-light:     lighten($brand-color, 5%) !default;
 $brand-color-dark:      darken($brand-color, 35%) !default;
 
